# tv-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  MAGIC_LINK_IMPLEMENTATION.md  MAGIC_LINK_SERVER_API.md  Makefile  README.md  database.md  pyproject.toml  test_magic_link.py
assets/: content.json  mp4-info.sh  recode-level.sh  recode-remove-bframes.sh
db/: schema.sql  seed.sql
scripts/: recreate_database.sh
src/tv_api/: __init__.py  config.py  database.py  email.py  logging.py  main.py  middleware.py
src/tv_api/api/: __init__.py
src/tv_api/api/routers/: auth.py  content.py  health.py  privacy.py  shopify.py  users.py
tests/: test_routes.py
